# crosswalk-detection

./: .gitignore  CLAUDE.md  README_BENCHMARK.md  TODO.md  benchmark_models.py  benchmark_results.json  config.yaml  main.py  pyproject.toml  setup_env.sh
assets/model/: yolov26n_coco8_int8.onnx  yolov8n_coco8_int8.onnx
assets/model/yolo26n_ncnn_model/: metadata.yaml
assets/model/yolov26n_coco8_ncnn/: metadata.yaml  model_ncnn.py
assets/model/yolov8n_coco8_ncnn/: metadata.yaml  model.ncnn.param  model_ncnn.py
docs/specs/: 2026-06-16-crosswalk-human-detection-poc-design.md
src/: main.py
src/core/: engine.py
src/providers/: __init__.py  base.py  picamera.py  registry.py  rtsp.py  usb_webcam.py  video.py  video_file.py
src/utils/: config_loader.py  visualization.py
tests/: picam.py  test_picamera_provider.py  test_rtsp_provider.py  test_usb_webcam_provider.py
tests/picamera/: test.h264
