[project]
name = "crosswalk-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "onnxruntime",
    "opencv-contrib-python",
    "psutil>=7.2.2",
    "pyyaml",
    "smbus2",
    "tflite-runtime>=2.14.0",
    "ultralytics",
]
