[project]
name = "crosswalk-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy",
    "onnxruntime",
    "opencv-contrib-python",
    "picamera2>=0.3.36",
    "psutil>=7.2.2",
    "pytest>=9.1.1",
    "pyyaml",
    "smbus2",
    "ultralytics",
]
